* built in datasets have been checked to make sure they use characters,
  factors and ordered factors appropriately

* `geom_raster` and `annotation_raster` gain new `interpolate` argument for
  controlling whether or not rasters are interpolated

* Added `plot` as an alias for `print` for ggplot objects.

* Visual tests have been moved to /visual_test and modified to work with the
  vtest package. (Thanks to Winston Chang)

* `geom_dotplot`: now supports stacking. It uses `stackgroups = TRUE` instead
  of the usual position="stack", for technical reasons. It also will stack in
  the x direction when binning along the y axis. (Thanks to Winston Chang)

* `geom_rug` now allows control over which sides to put the rug lines, with
  the `sides` argument. (Thanks to Winston Chang)

* `annotation_logticks`: a new geom that adds tick marks on the inside of the
  plotting rectangle that have diminishing spacing for log-10 axes. (Thanks
  to Winston Chang)

BUG FIXES

* `munch_range` properly reports the x and y range. (Thanks to Winston Chang)

* `stat_bin2d` handles data with NA in the position variables. Error was
  triggered when scale was limited to a range smaller than the range of
  the data. (Bug reported by Tao Gao; diagnosed and fixed by Brian Diggs)

* `scale_*_identity` will now produce a legend when `guide = "legend"` and no
  breaks or labels are supplied (Fixes #453)

* `geom_map` now works with `coord_map` (Fixes #480)

* discrete scales now accept named vectors of labels again (Fixes #427)


ggplot2 0.9.0
----------------------------------------------------------------

NEW FEATURES

* `annotation_custom`: a new geom intended for use as static annnotations that
  are the same in every panel. Can be used to add inset plots, tables, and
  other grid-based decorations inside the plot area (Contributed by Baptiste
  Auguié).

* `geom_map`: a new special case of `geom_polygon` useful when you are drawing